--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -3,6 +3,25 @@
   padding-left: 100px;
 }
 
+.head-awal {
+  justify-content: center;
+  text-align: left;
+  margin-top: 100px;
+  color: #8BAC3E;
+  font-size: 64px;
+  font-family: Rubik;
+  font-weight: bold;
+}
+
+.p-1 {
+  justify-content: center;
+  text-align: left;
+  margin-top: 30px;
+  font-size: 18px;
+  font-family: Rubik;
+  font-weight: 400px;
+}
+
 .btn--signup {
   margin-left: 0px;
   background: #8BAC3E;
@@ -29,8 +48,8 @@
 .card--top {
   border: 0px;
   border-radius: 10px;
-  width: 300px;
-  height: 93px;
+  width: 400px;
+  /* height: 93px; */
   left: 20px;
   top: -50px;
   background: rgba(255, 255, 255, 0.74);
@@ -54,16 +73,25 @@
 
 
 
-@media (max-width: 768px) {
-  .button-container {
-    flex-direction: column;
-    align-items: center;
+@media (max-width: 576px) {
+  .head-awal {
+    font-size: 48px;
   }
-
-  .btn--about {
-    margin-left: 0;
-    margin-right: 0;
-    margin-top: 10px;
+  .image--food {
+    /* padding-top: 80px; */
+    padding-left: 0px;
+    padding-right: 100px;
+    width: 80vw;
+  }
+  .card--top {
+    margin-left: 60px;
+    border: 0px;
+    border-radius: 10px;
+    width: 70vw;
+    font-size: 10px;
+  }
+  .card-title{
+    font-size: 15px;
   }
 }
 
